StringView operator==(char*) should check the length of the string https://bugs.webkit.org/show_bug.cgi?id=187422

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/eventsource/format-field-parsing-expected.txt:

Source/WebCore:

Covered by existing tests.

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::databaseNameFromEncodedFilename):

Source/WTF:

Update StringView operator== to ensure that any character raw pointer comparison actually check the length of the raw pointer string.
This patch mimicks the behavior of String.
For instance, comparing a StringView with "he\0llo" and "he" will give the same result.

* wtf/linux/MemoryFootprintLinux.cpp:
(WTF::memoryFootprint):
* wtf/text/StringView.h:
(WTF::operator==):
(WTF::operator!=):
(WTF::equal):
(WTF::StringView::stripLeadingAndTrailingMatchedCharacters):

Tools:

* TestWebKitAPI/Tests/WTF/StringView.cpp:
(TestWebKitAPI::equal2):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/202724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233660 268f45cc-cd09-0410-ab3c-d52691b4dbfc